# serializer version: 1
# name: test_all_entities[sensor.connections_date-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.connections_date',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATE: 'date'>,
    'original_icon': None,
    'original_name': 'Date',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_last_played',
    'unique_id': '218886794-connections-connections_last_played',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.connections_date-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'date',
      'friendly_name': 'Connections Date',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.connections_date',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-09-23',
  })
# ---
# name: test_all_entities[sensor.connections_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.connections_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Duration',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_streak',
    'unique_id': '218886794-connections-connections_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.connections_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Connections Duration',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.connections_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor.connections_duration_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.connections_duration_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Duration',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_max_streak',
    'unique_id': '218886794-connections-connections_max_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.connections_duration_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Connections Duration',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.connections_duration_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor.connections_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.connections_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_won',
    'unique_id': '218886794-connections-connections_won',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.connections_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Connections None',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.connections_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_all_entities[sensor.connections_played-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.connections_played',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Played',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_played',
    'unique_id': '218886794-connections-connections_played',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.connections_played-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Connections Played',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.connections_played',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9',
  })
# ---
# name: test_all_entities[sensor.spelling_bee_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spelling_bee_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'spelling_bees_total_words',
    'unique_id': '218886794-spelling_bee-spelling_bees_total_words',
    'unit_of_measurement': 'words',
  })
# ---
# name: test_all_entities[sensor.spelling_bee_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spelling Bee None',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'words',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spelling_bee_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '362',
  })
# ---
# name: test_all_entities[sensor.spelling_bee_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spelling_bee_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'spelling_bees_total_pangrams',
    'unique_id': '218886794-spelling_bee-spelling_bees_total_pangrams',
    'unit_of_measurement': 'pangrams',
  })
# ---
# name: test_all_entities[sensor.spelling_bee_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spelling Bee None',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'pangrams',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spelling_bee_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15',
  })
# ---
# name: test_all_entities[sensor.spelling_bee_played-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.spelling_bee_played',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Played',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'spelling_bees_played',
    'unique_id': '218886794-spelling_bee-spelling_bees_played',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.spelling_bee_played-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spelling Bee Played',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.spelling_bee_played',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '87',
  })
# ---
# name: test_all_entities[sensor.wordle_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wordle_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Duration',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_streak',
    'unique_id': '218886794-wordle-wordles_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.wordle_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Wordle Duration',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wordle_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[sensor.wordle_duration_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wordle_duration_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Duration',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_max_streak',
    'unique_id': '218886794-wordle-wordles_max_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.wordle_duration_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Wordle Duration',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wordle_duration_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_all_entities[sensor.wordle_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wordle_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_won',
    'unique_id': '218886794-wordle-wordles_won',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.wordle_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Wordle None',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wordle_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '26',
  })
# ---
# name: test_all_entities[sensor.wordle_played-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wordle_played',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Played',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_played',
    'unique_id': '218886794-wordle-wordles_played',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.wordle_played-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Wordle Played',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wordle_played',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '33',
  })
# ---
